--- a/user_model2/WebContent/WEB-INF/web.xml
+++ b/user_model2/WebContent/WEB-INF/web.xml
@@ -3,7 +3,7 @@
   <display-name>user_model2</display-name>
   <filter>
     <filter-name>Encoding Filter</filter-name>
-    <filter-class>com.itwill.filter.EncodingFilter</filter-class>
+    <filter-class>com.itwill.summer.filter.EncodingFilter</filter-class>
     <init-param>
       <param-name>encoding</param-name>
       <param-value>UTF-8</param-value>
@@ -11,8 +11,19 @@
   </filter>
   <filter-mapping>
     <filter-name>Encoding Filter</filter-name>
-    <url-pattern>*.jsp</url-pattern>
+    <url-pattern>/*</url-pattern>
   </filter-mapping>
+  <servlet>
+  	<servlet-name>controller</servlet-name>
+  	<servlet-class>com.itwill.summer.DispatcherServlet</servlet-class>
+  	<init-param>
+  		<param-name>configFile</param-name>
+  		<param-value></param-value>
+  	</init-param>
+  	<load-on-startup>1</load-on-startup>
+  </servlet>
+  
+  
   <welcome-file-list>
     <welcome-file>user_main.jsp</welcome-file>
     <welcome-file>index.html</welcome-file>
