--- a/guest_model2/WebContent/WEB-INF/guest_controller_mapping.properties
+++ b/guest_model2/WebContent/WEB-INF/guest_controller_mapping.properties
@@ -1,4 +1,5 @@
 #guest controller mapping
+#\ub9e4\ud551\ud30c\uc77c compile --> native2ascii.exe 
 /guest_main.do=com.itwill.guest.controller.GuestMainController
 /guest_write_form.do=com.itwill.guest.controller.GuestWriteFormController
 /guest_write_action.do=com.itwill.guest.controller.GuestWriteActionController
