--- a/user_model2/WebContent/WEB-INF/web.xml
+++ b/user_model2/WebContent/WEB-INF/web.xml
@@ -22,10 +22,12 @@
   	</init-param>
   	<load-on-startup>1</load-on-startup>
   </servlet>
-  
+  <servlet-mapping>
+  	<servlet-name>controller</servlet-name>
+  	<url-pattern>*.do</url-pattern>
+  </servlet-mapping>
   
   <welcome-file-list>
-    <welcome-file>user_main.jsp</welcome-file>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
     <welcome-file>index.jsp</welcome-file>
