--- a/user_model2/WebContent/WEB-INF/user_controller_mapping.properties
+++ b/user_model2/WebContent/WEB-INF/user_controller_mapping.properties
@@ -1,5 +1,6 @@
 #user mapping
 /user_main.do=com.itwill.user.controller.UserMainController
+/user_login_form.do=com.itwill.user.controller.UserLoginFormController
 #/user_write_form.do
 #/user_write_action.do
 #/user_login_action.do
