--- a/user_model2/WebContent/WEB-INF/user_controller_mapping.properties
+++ b/user_model2/WebContent/WEB-INF/user_controller_mapping.properties
@@ -3,7 +3,7 @@
 /user_login_form.do=com.itwill.user.controller.UserLoginFormController
 #/user_write_form.do
 #/user_write_action.do
-#/user_login_action.do
+/user_login_action.do=com.itwill.user.controller.UserLoginActionController
 #/user_logout_action.do
 #/user_list.do
 #/user_view.do
