--- a/user_model2/WebContent/WEB-INF/user_controller_mapping.properties
+++ b/user_model2/WebContent/WEB-INF/user_controller_mapping.properties
@@ -5,7 +5,7 @@
 #/user_write_action.do
 /user_login_action.do=com.itwill.user.controller.UserLoginActionController
 #/user_logout_action.do
-#/user_list.do
+/user_list.do=com.itwill.user.controller.UserListController
 #/user_view.do
 #/user_modify_form.do
 #/user_modify_action.do
